# gradient-free-mcmc-postprocessing

./: .gitignore  LICENSE  README.md  pyproject.toml
code/: .gitignore  Dask-apply-along-axis.ipynb  Gaussian_mixture.ipynb  Gaussian_mixture.py  Gradient_free_thinning.ipynb  Gradient_free_thinning.py  Kernel_Stein_discrepancy.ipynb  Lotka-Volterra.ipynb  Lotka-Volterra.py  Stein_Thinning_Example.ipynb  mcmc.py  pyproject.toml  requirements.txt
code/examples/: Dask_AWS.ipynb  Jax_ODE_sensitivity.ipynb  Stein_Thinning_Example.ipynb
code/notebooks/: Gaussian_mixture.ipynb  Gaussian_mixture.py  Importance_resampling.ipynb  Kernel_Stein_discrepancy.ipynb  Lotka-Volterra.py
code/notebooks/examples/: Caching.ipynb  Dask_AWS.ipynb  Gradient_free_Stein_thinning.ipynb  JAX_Stein_Thinning.ipynb
code/notebooks/gaussian_mixture/: Gaussian_mixture.ipynb  Gaussian_mixture.py
code/notebooks/lotka_volterra/: Comparison.ipynb  Gradient_free.ipynb  Gradient_free_Student_t.ipynb  Gradient_free_burn_in_removal.ipynb  Gradient_free_elliptic_distributions.ipynb  KDE-WIP.ipynb  KDE.ipynb  Naive_thinning.ipynb  ODE_solving_time.ipynb  Sampling.ipynb  Sensitivity_analysis.ipynb  Stein_thinning.ipynb
code/src/: lotka_volterra.py  thinning.py
code/src/utils/: caching.py  ksd.py  mvn.py  parallel.py  paths.py  plotting.py
code/tests/: test_ksd.py
code/tests/utils/: test_parallel.py
code/utils/: caching.py  parallel.py  plotting.py  sampling.py
presentation/: .gitignore  presentation.tex
report/: .gitignore  biblio.bib  main.tex  plainnat_modified.bst  report.tex  word_count.sh
(+11 files in other folders)
