# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradient_free_mcmc_postprocessing"
version = "0.1.0"
description = "Gradient-free MCMC post-processing"
readme = "README.md"
authors = [{ name = "Artem Glebov" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["mcmc", "Stein", "thinning", "KSD"]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
    "jupyterlab",
    "pystan",
    "arviz",
    "jax",
    "dask[distributed]",
    "stein_thinning",
    "dcor",
    "numdifftools",
    "scikit-learn",
    "coiled",
    "cachetools",
    "s3fs",
    "pytest",
]
requires-python = ">=3.9,<=3.12"

[project.urls]
Homepage = "https://github.com/aglebov/gradient-free-mcmc-postprocessing"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
